# IMAS

./: .~lock.Auction_Coalition_HarvestingCoordination.docx#  README.md
Documents/: TODO.md  (+4 more)
task3/city_emergency/: README.md  pyproject.toml
task3/city_emergency/src/city_emergency/: crew.py  main.py
task3/city_emergency/src/city_emergency/config/: tasks.yaml
task3/city_emergency_response_flow/: .gitignore  README.md  crewai_flow.html  final_report.md  final_report.txt  notes.md  pyproject.toml  todo.md
task3/city_emergency_response_flow/src/city_emergency_response_flow/: initial_report.md  main.py
task3/city_emergency_response_flow/src/city_emergency_response_flow/config/: config.properties
task3/city_emergency_response_flow/src/city_emergency_response_flow/crews/emergency_crew/: emergency_crew.py
task3/city_emergency_response_flow/src/city_emergency_response_flow/crews/emergency_crew/config/: agents.yaml  tasks.yaml
task3/city_emergency_response_flow/src/city_emergency_response_flow/crews/emergency_crew/schemas/: schemas.py
task3/city_emergency_response_flow/src/city_emergency_response_flow/crews/emergency_crew_phase_1/: emergency_crew_phase_1.py
task3/city_emergency_response_flow/src/city_emergency_response_flow/crews/emergency_crew_phase_2/: emergency_crew_phase_2.py  ethics.txt
task3/city_emergency_response_flow/src/city_emergency_response_flow/crews/firefighting_crew/: firefighting_crew.py
task3/city_emergency_response_flow/src/city_emergency_response_flow/crews/medical_crew/: medical_crew.py
task3/city_emergency_response_flow/src/city_emergency_response_flow/crews/police_crew/: police_crew.py
task3/city_emergency_response_flow/src/city_emergency_response_flow/tools/: coordinates_from_address_tool.py  emergency_route_tool.py  hospital_route_tool.py  json_append_tool.py  json_append_tool_v2.py
task3/city_emergency_response_flow/tests/hospitals/: hospitals_0.yaml  hospitals_1.yaml  hospitals_2.yaml
task3/city_emergency_response_flow/tests/initial_reports/: initial_report_01.md  initial_report_02.md  initial_report_03.md
task3/city_emergency_response_flow/tests/src/: test_vehicle_positions.py
task3/city_emergency_response_flow/tests/vehicle_positions/: ambulances.yaml  firetrucks.yaml  police_vehicles.yaml
(+80 files in other folders)
