[project]
name = "city_emergency"
version = "0.1.0"
description = "city_emergency using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
city_emergency = "city_emergency.main:run"
run_crew = "city_emergency.main:run"
train = "city_emergency.main:train"
replay = "city_emergency.main:replay"
test = "city_emergency.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
